--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
-    "node": "^22.16.0"
+    "node": "^22.16.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
